tests/integration/snapshots/build/test_build_invalid_acton_toml.stderr.txt
Error: TOML parse error at line 2, column 9
  |
2 | [package
  |         ^
unclosed table, expected `]`

